Mon May  8 13:12:01 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fun with dmalloc

Mon May  8 13:10:12 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Ensure backgrounds of index and montage images are black by
	default. Imlib2's behaviour changed in this respect at some point.

Sun May  7 18:42:57 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed breakage (and segfault) when preloading images in verbose
	mode if any of the images are unloadable. Stupid typo.

Sun Apr 30 16:02:11 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added  -n, --reverse. Reverses the sort order.
	Use this to invert the order of the filelist. Eg to sort in
	reverse width order, use -nSwidth

Sun Apr 30 15:13:25 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* In slideshow and muliwindow modes, DELETE now removes the
	current file from the filelist. CTRL+DELETE deletes the files from
	the filesystem and removes it from the filelist.

Sun Apr 30 14:48:04 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Filelists can now be saved to and loaded from files, very much
	like the playlists used by music players.
	* Here's the details:
            -e, --filelist FILE
            This option is similar to the playlists used by music
            software. If FILE exists, it will be read for a  list
            of  files to load, in the order they appear. The for-
            mat is a list of image filenames, absolute  or  rela-
            tive to the current directory, one filename per line.
            If FILE doesn't exist, it will be  created  from  the
            internal  filelist  at  the end of a viewing session.
            This is best used to store  the  results  of  complex
            sorts  (-Spixels for example) for later viewing.  Any
            changes to the internal filelist (such as deleting  a
            file or it being pruned for being unloadable) will be
            saved to FILE when feh exits. You can  add  files  to