@@ -251,6 +251,10 @@ Use FILE as a background for your montage. With this option specified, the
 size of the montage will default to the size of FILE if no size restrictions
 are specified.
 .TP 5
+.B -a, --alpha NUM
+When drawing thumbnails onto the background, apply them with a transparency
+level of NUM (0-255).
+.TP 5
 .B -o FILE
 Save the created montage to FILE
 .TP 5
