@@ -5,7 +5,7 @@ FEH="./feh"
 FEH="feh"
 }
 echo ""
-echo "This feature is not yet fully implemented, so this test is boring :("
+echo "Check the images are actually kinda transparent ;-)"
 echo ""
-$FEH $1 -V -o _test11.jpg --alpha 150 -m --bg testimages/heidi.jpg --thumb-width 100 --thumb-height 100 testimages
+$FEH $1 -V -o _test11.jpg --alpha 70 -m --bg testimages/heidi.jpg --thumb-width 100 --thumb-height 100 testimages
 echo ""
